--- a/frontend/css/skeleton.css
+++ b/frontend/css/skeleton.css
@@ -1,5 +1,5 @@
 /*
-* Skeleton V2.0.4
+* frontend V2.0.4
 * Copyright 2014, Dave Gamache
 * www.getskeleton.com
 * Free to use under the MIT license.
@@ -116,7 +116,7 @@
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
-html is set to 62.5% so that all the REM measurements throughout Skeleton
+html is set to 62.5% so that all the REM measurements throughout frontend
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
