--- a/Our-Data.css
+++ b/Our-Data.css
@@ -3,111 +3,162 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 513px;
+  min-height: 737px;
 }
 
 .u-section-1 .u-text-1 {
   width: 570px;
-  font-size: 2.25rem;
   margin: 35px auto 0;
+}
+
+.u-section-1 .u-text-2 {
+  width: 570px;
+  margin: 29px auto 0;
+}
+
+.u-section-1 .u-list-icon-1 {
+  color: rgb(76, 175, 80) !important;
+}
+
+.u-section-1 .u-list-icon-2 {
+  color: rgb(76, 175, 80) !important;
+}
+
+.u-section-1 .u-text-3 {
+  width: 570px;
+  font-size: 2.25rem;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-blog-1 {
   width: 1140px;
   min-height: 375px;
   grid-auto-rows: 100%;
-  margin: 29px auto 0 0;
+  margin: 20px auto 60px 0;
 }
 
 .u-section-1 .u-repeater-1 {
-  grid-auto-columns: calc(33.3333% - 14.6667px);
-  grid-template-columns: calc(33.3333% - 14.6667px) calc(33.3333% - 14.6667px) calc(33.3333% - 14.6667px);
+  grid-auto-columns: calc(33.3333% - 27.3333px);
+  grid-template-columns: calc(33.3333% - 27.3333px) calc(33.3333% - 27.3333px) calc(33.3333% - 27.3333px);
   grid-auto-rows: 100%;
-  grid-gap: 22px 22px;
+  grid-gap: 41px 41px;
 }
 
 .u-section-1 .u-repeater-item-1 {
   background-image: none;
-  box-shadow: 5px 5px 4px 0 rgba(0,0,0,0.15);
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1);
 }
 
 .u-section-1 .u-container-layout-1 {
   padding: 30px 20px;
 }
 
-.u-section-1 .u-image-1 {
-  height: 231px;
-  width: 325px;
+.u-section-1 .u-text-4 {
+  animation-duration: 1000ms;
   margin: 0;
 }
 
-.u-section-1 .u-text-2 {
-  margin: 17px 0 0;
+.u-section-1 .u-image-1 {
+  width: 285px;
+  height: 186px;
+  margin: 20px auto 0;
 }
 
-.u-section-1 .u-metadata-1 {
-  font-size: 0.875rem;
-  margin: 15px auto 0 0;
+.u-section-1 .u-text-5 {
+  margin: 19px 0 0;
 }
 
 .u-section-1 .u-repeater-item-2 {
-  box-shadow: 5px 5px 4px 0 rgba(0,0,0,0.15);
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1);
 }
 
 .u-section-1 .u-container-layout-2 {
   padding: 30px 20px;
 }
 
-.u-section-1 .u-image-2 {
-  height: 231px;
-  width: 325px;
+.u-section-1 .u-text-6 {
+  animation-duration: 1000ms;
   margin: 0;
 }
 
-.u-section-1 .u-text-3 {
-  margin: 17px 0 0;
+.u-section-1 .u-image-2 {
+  width: 285px;
+  height: 186px;
+  margin: 20px auto 0;
 }
 
-.u-section-1 .u-metadata-2 {
-  font-size: 0.875rem;
-  margin: 15px auto 0 0;
+.u-section-1 .u-text-7 {
+  margin: 19px 0 0;
 }
 
 .u-section-1 .u-repeater-item-3 {
-  box-shadow: 5px 5px 4px 0 rgba(0,0,0,0.15);
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1);
 }
 
 .u-section-1 .u-container-layout-3 {
   padding: 30px 20px;
 }
 
-.u-section-1 .u-image-3 {
-  height: 231px;
-  width: 325px;
+.u-section-1 .u-text-8 {
+  animation-duration: 1000ms;
   margin: 0;
 }
 
-.u-section-1 .u-text-4 {
-  margin: 17px 0 0;
+.u-section-1 .u-image-3 {
+  width: 285px;
+  height: 186px;
+  margin: 20px auto 0;
 }
 
-.u-section-1 .u-metadata-3 {
-  font-size: 0.875rem;
-  margin: 15px auto 0 0;
+.u-section-1 .u-text-9 {
+  margin: 19px 0 0;
 }
 
-.u-section-1 .u-btn-1 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  background-image: none;
-  border-style: solid;
-  margin: 30px auto 60px;
+.u-section-1 .u-repeater-item-4 {
+  box-shadow: 2px 2px 8px 0 rgba(128,128,128,1);
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 30px 20px;
+}
+
+.u-section-1 .u-text-10 {
+  animation-duration: 1000ms;
+  margin: 0;
+}
+
+.u-section-1 .u-image-4 {
+  width: 285px;
+  height: 186px;
+  margin: 20px auto 0;
+}
+
+.u-section-1 .u-text-11 {
+  margin: 19px 0 0;
+}
+
+.u-section-1 .u-gallery-nav-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.u-section-1 .u-gallery-nav-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-blog-1 {
     width: 940px;
-    min-height: 309px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-auto-columns: calc(33.3333% - 14.6667px);
+    grid-template-columns: calc(33.3333% - 14.6667px) calc(33.3333% - 14.6667px) calc(33.3333% - 14.6667px);
   }
 
   .u-section-1 .u-repeater-item-1 {
@@ -115,8 +166,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    height: 195px;
-    width: 258px;
+    height: 185px;
   }
 
   .u-section-1 .u-repeater-item-2 {
@@ -124,8 +174,7 @@
   }
 
   .u-section-1 .u-image-2 {
-    height: 195px;
-    width: 258px;
+    height: 185px;
   }
 
   .u-section-1 .u-repeater-item-3 {
@@ -133,40 +182,26 @@
   }
 
   .u-section-1 .u-image-3 {
-    height: 195px;
-    width: 258px;
+    height: 185px;
   }
 
-  .u-section-1 .u-btn-1 {
-    height: 49px;
+  .u-section-1 .u-repeater-item-4 {
+    background-size: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    height: 185px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-blog-1 {
     width: 720px;
-    min-height: 711px;
   }
 
   .u-section-1 .u-repeater-1 {
     grid-auto-columns: calc(50% - 11px);
     grid-template-columns: calc(50% - 11px) calc(50% - 11px);
-    grid-auto-rows: calc(50% - 11px);
-  }
-
-  .u-section-1 .u-image-1 {
-    height: 218px;
-    width: 309px;
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 218px;
-    width: 309px;
-  }
-
-  .u-section-1 .u-image-3 {
-    height: 218px;
-    width: 309px;
   }
 }
 
@@ -175,8 +210,15 @@
     width: 540px;
   }
 
+  .u-section-1 .u-text-2 {
+    width: 540px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: 540px;
+  }
+
   .u-section-1 .u-blog-1 {
-    min-height: 1517px;
     height: auto;
     margin-right: initial;
     margin-left: initial;
@@ -186,7 +228,6 @@
   .u-section-1 .u-repeater-1 {
     grid-auto-columns: 100%;
     grid-template-columns: 100%;
-    grid-auto-rows: calc(33.33% - 14.6667px);
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -194,19 +235,9 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 348px;
-    width: 480px;
-  }
-
   .u-section-1 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 348px;
-    width: 480px;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -214,28 +245,25 @@
     padding-right: 30px;
   }
 
-  .u-section-1 .u-image-3 {
-    height: 348px;
-    width: 480px;
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 340px;
   }
 
-  .u-section-1 .u-blog-1 {
-    min-height: 1169px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-1 .u-text-2 {
+    width: 340px;
   }
 
-  .u-section-1 .u-repeater-1 {
-    grid-auto-rows: calc(33.33% - 14.666666666666666px);
+  .u-section-1 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 340px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -244,24 +272,10 @@
     padding-right: 20px;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 232px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
   .u-section-1 .u-container-layout-2 {
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 232px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-container-layout-3 {
@@ -270,10 +284,9 @@
     padding-right: 20px;
   }
 
-  .u-section-1 .u-image-3 {
-    height: 232px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-1 .u-container-layout-4 {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
